--- a/client/src/layout/styles.css
+++ b/client/src/layout/styles.css
@@ -202,5 +202,35 @@ html {
     display: inline-flex;
 }
 .contact-us {
-    font-weight: bold;
+    font-weight: bold !important;
+    margin-right: 0 !important;
+}
+.search-box {
+    position: absolute;
+    width: 100%;
+    top: 0;
+    right: 0;
+    justify-content: end;
+    margin-top: 10px;
+    padding-right: 100px;
+}
+.search-p {
+    margin-right: 0;
+    padding-bottom: 5px;
+    padding-right: 10px;
+}
+.search-input {
+    border-left: 0;
+    border-right: 0;
+    border-top: 0;
+    padding: 0;
+    padding-left: 10px;
+    border-color: #005eb8;
+}
+.search-input-grid {
+    padding: 0 !important;
+    margin: auto !important;
+}
+.search-input:focus {
+    border: none;
 }
